Fix alignment of icons in storage and network cards in main view

--- a/src/components/aggregateStatusCards.scss
+++ b/src/components/aggregateStatusCards.scss
@@ -1,10 +1,5 @@
-.ct-cards-grid {
-  .pf-c-card .pf-m-link {
-    margin-right: auto;
-  }
-
-  /* Add a space after the arrow icons */
-  .active-resources > svg {
-    margin-right: var(--pf-global--spacer--sm);
-  }
+.active-resources {
+  display: flex;
+  align-items: center;
+  column-gap: var(--pf-global--spacer--xs);
 }
